tests/cases/traits/errors/trait-method-unknown.ari
impl Eq[i64] for i64 {
  fn eq(self, other: i64) -> bool {
    self == other
  }
}

fn main() -> i64 {
  let value = 1;
  if value.missing() {
    1
  } else {
    0
  }
}
